--- a/ProyectoDesarrollo/src/Reporte/ReportCurEstDepar.jrxml
+++ b/ProyectoDesarrollo/src/Reporte/ReportCurEstDepar.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6dcd37d8-cdac-413b-a268-e09d552868ad">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6dcd37d8-cdac-413b-a268-e09d552868ad">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -30,14 +30,14 @@ WHERE curso.id_curso = $P{idCurso};]]>
 	<title>
 		<band height="70" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="fa8f8faf-5018-4cef-9854-18ba00d9085d" x="157" y="14" width="81" height="33"/>
+				<reportElement uuid="fa8f8faf-5018-4cef-9854-18ba00d9085d" x="167" y="19" width="81" height="33"/>
 				<textElement>
 					<font fontName="Serif" size="24"/>
 				</textElement>
 				<text><![CDATA[Curso ]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="e5fa1431-0bd6-4b70-86e2-88e82991702e" x="240" y="14" width="153" height="33"/>
+				<reportElement uuid="e5fa1431-0bd6-4b70-86e2-88e82991702e" x="250" y="19" width="153" height="33"/>
 				<textElement>
 					<font size="24"/>
 				</textElement>
